feat:checkboxをcomponents/uiに移動&uiにbuttonを作成

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -2,11 +2,6 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -35,8 +30,16 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2.986em;
   line-height: 1.1;
+}
+
+h2{
+  font-size: 2.488em;
+}
+
+h2{
+  font-size: 2.074em;
 }
 
 button {
