--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -8,6 +8,9 @@
   -moz-osx-font-smoothing: grayscale;
   --base-font-size: 1.4em;
   --base-line-height: 2;
+  --background-color: #fffdff;
+  --base-text-color: #333;
+  --accent-color: #a24497;
 }
 
 html{
@@ -29,9 +32,13 @@ body {
   min-height: 100vh;
 }
 
+h1,h2,h3{
+  font-weight: bold;
+  line-height: 1.1;
+}
+
 h1 {
   font-size: 2.986em;
-  line-height: 1.1;
 }
 
 h2{
@@ -42,21 +49,7 @@ h2{
   font-size: 2.074em;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+p{
+  font-size: 1.4em;
 }
