--- a/react-app/src/App.module.scss
+++ b/react-app/src/App.module.scss
@@ -1,17 +1,8 @@
 .wrapper{
   width: 1280px;
   margin: 0 auto;
-}
-
-.checkbox_wrapper{
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  font-size: var(--base-font-size);
-  line-height: var(--base-line-height);
-  label{
-    min-width: 200px;
-    input{
-      margin-right: 1em;
-    }
-  }
+  padding: 100px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 10rem;
 }
