--- a/react-app/src/components/ui/checkbox/checkbox.module.scss
+++ b/react-app/src/components/ui/checkbox/checkbox.module.scss
@@ -1,7 +1,52 @@
-.label{
+.checkbox_wrapper{
+  font-size: 1.1rem;
+  min-height: 2em;
   min-width: 200px;
-  padding: 0.5em 1em;
+  padding: 0.25em 1em;
+  position: relative;
   input{
-    margin-right: 1em;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    opacity: 0;
+    &[type="checkbox"]:checked + .label{
+      background-color: #20f319;
+    }
+    &[type="checkbox"]:checked + .label > .custom{
+      left: 100%;
+      transform: translate(-100%,-50%);
+      background: green;
+    }
+  }
+  .label{
+    position: relative;
+    padding: 0.25em 1em;
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    color: #333;
+    font-weight: bold;
+    line-height: 2;
+    text-align: center;
+    border-radius: .5em;
+    background: #e8e8e8;
+    box-shadow: inset 0 0 .0625em .125em rgb(255 255 255 / .2), inset 0 .0625em .125em rgb(0 0 0 / .4);
+    transition: background-color .4s linear;
+    .custom{
+      border-radius: .5em;
+      position: absolute;
+      left: 0;
+      top: 50%;
+      transform: translate(0%,-50%);
+      display: block;
+      height: 100%;
+      aspect-ratio: 1 / 1;
+      background: red;
+      transition: left 0.5s,transform 0.5s;
+      box-shadow: inset 0 -.0625em .0625em .125em rgb(0 0 0 / .1), inset 0 -.125em .0625em rgb(0 0 0 / .2), inset 0 .1875em .0625em rgb(255 255 255 / .3), 0 .125em .125em rgb(0 0 0 / .5);
+    }
   }
 }
