feat:cssをレスポンシブ対応、styles/_media.scssに@mixinを記述し、includeすることで対応

--- a/react-app/src/components/ChartRadioButtonList/chart-radiobutton-list.module.scss
+++ b/react-app/src/components/ChartRadioButtonList/chart-radiobutton-list.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/media";
+
 .radio_inputs {
   position: relative;
   display: flex;
@@ -9,4 +11,7 @@
   padding: 0.25rem;
   width: 300px;
   font-size: 14px;
+  @include mobile{
+    width: 100%;
+  }
 }
