--- a/react-app/src/App.module.scss
+++ b/react-app/src/App.module.scss
@@ -1,5 +1,6 @@
 .wrapper{
-  width: 1280px;
+  max-width: var(--content-width);
+  width: 90%;
   margin: 0 auto;
   padding: 100px 0;
   display: flex;
