--- a/react-app/src/components/populationChart/population-chart.module.scss
+++ b/react-app/src/components/populationChart/population-chart.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/media";
+
 .graph_wrapper{
   display: flex;
   flex-direction: column;
@@ -8,5 +10,9 @@
   .info_wrapper{
     display: flex;
     justify-content: space-between;
+    @include mobile{
+      flex-direction: column;
+      gap: 2rem;
+    }
   }
 }
