--- a/react-app/src/components/prefectureForm/prefecture-form.module.scss
+++ b/react-app/src/components/prefectureForm/prefecture-form.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/media";
+
 .form{
   display: flex;
   flex-direction: column;
@@ -14,6 +16,10 @@
   grid-template-columns: repeat(6, 1fr);
   font-size: var(--base-font-size);
   line-height: var(--base-line-height);
+  @include mobile{
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+  }
 }
 
 .button_wrapper{
