--- a/react-app/src/components/ui/button/button.module.scss
+++ b/react-app/src/components/ui/button/button.module.scss
@@ -1,21 +1,4 @@
-/* .button{
-  width: fit-content;
-  background: var(--accent-color);
-  color: var(--background-color);
-  font-weight: bold;
-  padding: 0.5em 2em;
-  border-radius: 0.5em;
-  font-size: 1.728rem;
-  border: 1px solid #e8e8e8;
-  transition: all 0.3s;
-  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
-  &:active {
-    color: var(--background-color);
-    box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
-  }
-} */
 
-/* From Uiverse.io by cssbuttons-io */ 
 button {
   position: relative;
   border: none;
@@ -26,82 +9,73 @@ button {
   transition: filter 250ms;
   user-select: none;
   touch-action: manipulation;
- }
- 
- .shadow {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 12px;
-  background: hsl(0deg 0% 0% / 0.25);
-  will-change: transform;
-  transform: translateY(2px);
-  transition: transform
-     600ms
-     cubic-bezier(.3, .7, .4, 1);
- }
- 
- .edge {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 12px;
-  background: linear-gradient(
-     to left,
-     hsl(307.02deg 45.1% 15%) 0%,
-     hsl(307.02deg 45.1% 30.7%) 8%,
-     hsl(307.02deg 45.1% 30.7%) 92%,
-     hsl(307.02deg 45.1% 15%) 100%
-   );
- }
- 
- .front {
-  display: block;
-  position: relative;
-  padding: 12px 27px;
-  border-radius: 12px;
-  font-size: 1.1rem;
-  color: white;
-  background: hsl(307.02deg 45.1% 45.7%);
-  will-change: transform;
-  transform: translateY(-4px);
-  transition: transform
-     600ms
-     cubic-bezier(.3, .7, .4, 1);
- }
- 
- button:hover {
-  filter: brightness(110%);
- }
- 
- button:hover .front {
-  transform: translateY(-6px);
-  transition: transform
-     250ms
-     cubic-bezier(.3, .7, .4, 1.5);
- }
- 
- button:active .front {
-  transform: translateY(-2px);
-  transition: transform 34ms;
- }
- 
- button:hover .shadow {
-  transform: translateY(4px);
-  transition: transform
-     250ms
-     cubic-bezier(.3, .7, .4, 1.5);
- }
- 
- button:active .shadow {
-  transform: translateY(1px);
-  transition: transform 34ms;
- }
- 
- button:focus:not(:focus-visible) {
-  outline: none;
- }
+  &:hover {
+    filter: brightness(110%);
+    .front {
+      transform: translateY(-6px);
+      transition: transform
+        250ms
+        cubic-bezier(.3, .7, .4, 1.5);
+    } 
+    .shadow {
+      transform: translateY(4px);
+      transition: transform
+        250ms
+        cubic-bezier(.3, .7, .4, 1.5);
+    }
+  }
+  &:active{
+    .front {
+      transform: translateY(-2px);
+      transition: transform 34ms;
+    }
+    .shadow {
+      transform: translateY(1px);
+      transition: transform 34ms;
+    }
+  } 
+  &:focus:not(:focus-visible) {
+    outline: none;
+  }
+  .shadow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    background: hsl(0deg 0% 0% / 0.25);
+    will-change: transform;
+    transform: translateY(2px);
+    transition: transform 600ms cubic-bezier(.3, .7, .4, 1);
+  }
+  .edge {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    background: linear-gradient(
+      to left,
+      hsl(307.02deg 45.1% 15%) 0%,
+      hsl(307.02deg 45.1% 30.7%) 8%,
+      hsl(307.02deg 45.1% 30.7%) 92%,
+      hsl(307.02deg 45.1% 15%) 100%
+    );
+  }
+  .front {
+    display: block;
+    position: relative;
+    padding: 12px 27px;
+    border-radius: 12px;
+    font-size: 1.1rem;
+    color: white;
+    background: hsl(307.02deg 45.1% 45.7%);
+    will-change: transform;
+    transform: translateY(-4px);
+    transition: transform
+      600ms
+      cubic-bezier(.3, .7, .4, 1);
+  }
+}
