--- a/react-app/src/components/ui/checkbox/checkbox.module.scss
+++ b/react-app/src/components/ui/checkbox/checkbox.module.scss
@@ -1,9 +1,16 @@
+@import "../../../styles/media";
+
 .checkbox_wrapper{
   font-size: 1.1rem;
   min-height: 2em;
-  min-width: 200px;
+  min-width: 5em;
   padding: 0.25em 1em;
   position: relative;
+  @include mobile{
+    min-width: auto;
+    width: 100%;
+    padding: 0;
+  }
   input{
     position: absolute;
     top: 0;
@@ -35,6 +42,9 @@
     background: #e8e8e8;
     box-shadow: inset 0 0 .0625em .125em rgb(255 255 255 / .2), inset 0 .0625em .125em rgb(0 0 0 / .4);
     transition: background-color .4s linear;
+    @include mobile{
+      padding: 0.5em 1em;
+    }
     .custom{
       border-radius: .5em;
       position: absolute;
@@ -47,6 +57,9 @@
       background: red;
       transition: left 0.5s,transform 0.5s;
       box-shadow: inset 0 -.0625em .0625em .125em rgb(0 0 0 / .1), inset 0 -.125em .0625em rgb(0 0 0 / .2), inset 0 .1875em .0625em rgb(255 255 255 / .3), 0 .125em .125em rgb(0 0 0 / .5);
+      @include mobile{
+        width: 2rem;
+      }
     }
   }
 }
