--- a/react-app/src/index.scss
+++ b/react-app/src/index.scss
@@ -1,3 +1,5 @@
+@import "./styles/media";
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -11,6 +13,11 @@
   --background-color: #fffdff;
   --base-text-color: #333;
   --accent-color: #a24497;
+  --content-width: 1280px;
+  @include mobile{
+    --content-width: 360px;
+    --base-font-size: 1.1em;
+  }
 }
 
 html{
@@ -51,5 +58,5 @@ h2{
 
 
 p{
-  font-size: 1.4em;
+  font-size: var(--base-font-size);
 }
