--- a/react-app/src/components/populationChart/PopulationChart.module.scss
+++ b/react-app/src/components/populationChart/PopulationChart.module.scss
@@ -4,15 +4,9 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  p{
-    color: gray;
-  }
-  .info_wrapper{
-    display: flex;
-    justify-content: space-between;
-    @include mobile{
-      flex-direction: column;
-      gap: 2rem;
+  .title{
+    p{
+      color: gray;
     }
   }
 }
