--- a/react-app/src/index.scss
+++ b/react-app/src/index.scss
@@ -1,4 +1,4 @@
-@import "./styles/media";
+@use "./styles/media" as *;
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
